# ymlcpp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ClientCodeMock.cpp  RequestResponseConvertor.cpp  ServerAccessManager.cpp  ServerAccessManager.h  ServerAccessor.cpp
src/commands/: GenresRequest.cpp  GenresRequest.h  GenresResponse.cpp  GetFeedRequest.cpp  GetFeedResponse.cpp  SearchRequest.cpp  SearchResponse.cpp  SearchSuggestRequest.cpp  SearchSuggestResponse.cpp  SearchSuggestResponse.h  TrackDownloadRequest.cpp  TrackDownloadRequest.h  TrackDownloadResponse.cpp  TrackDownloadResponse.h  TrackGetPathRequest.cpp  TrackGetPathResponse.cpp  TrackVariantsRequest.cpp  TrackVariantsRequest.h  TrackVariantsResponse.cpp
src/commands/authorization_commands/: AuthorizationRequest.cpp  AuthorizationResponse.cpp
src/commands/common_and_base/: UserChoice.cpp
src/commands/common_and_base/base_requests_responses/: IServerRequest.h  ServerGetRequest.cpp  ServerPostRequest.cpp  ServerResponse.cpp
src/commands/common_and_base/common_enums/: UserChoice.cpp
src/commands/common_and_base/common_structures/: AlbumDescription.h
src/commands/common_and_base/parsers/: AlbumDescriptionParser.cpp  BestParser.cpp  BestParser.h  TrackDescriptionParser.cpp
src/commands/info_commands/content/: AlbumsInfoResponse.cpp  AlbumsInfoResponse.h  ArtistsInfoResponse.cpp  ContentInfoRequest.cpp  ContentInfoRequest.h  PlaylistsInfoResponse.cpp  PlaylistsInfoResponse.h  TracksInforesponse.cpp  TracksInforesponse.h
src/commands/info_commands/user/: UserInfoRequest.cpp  UserInfoResponse.cpp
src/commands/user_choice_commands/choice_get/: UserChoiceAlbumsGetResponse.cpp  UserChoiceArtistsGetResponse.cpp  UserChoiceArtistsGetResponse.h  UserChoiceGetRequest.cpp  UserChoiceGetResponse.cpp  UserChoicePlaylistsGetResponse.cpp  UserChoiceTracksGetResponse.cpp  UserDislikesGetResponse.cpp  UserLikesGetResponse.cpp
src/commands/user_choice_commands/choice_set/: UserChoiceSetRequest.cpp  UserChoiceSetResponse.cpp  UserChoiceSetResponse.h
src/main/: CMakeLists.txt  ClientCodeMock.cpp  ClientCodeMock.h  RequestResponseConvertor.cpp  RequestResponseConvertor.h  ServerAccessManager.cpp  ServerAccessManager.h  ServerAccessor.cpp  ServerAccessor.h  main.cpp
src/main/commands/: AuthorizationRequest.cpp  AuthorizationRequest.h  AuthorizationResponse.cpp  AuthorizationResponse.h  GenresRequest.cpp  GenresResponse.cpp  GenresResponse.h  GetFeedRequest.cpp  GetFeedRequest.h  GetFeedResponse.cpp  GetFeedResponse.h  ResponseCreator.cpp  ResponseCreator.h  SearchRequest.cpp  SearchRequest.h  SearchResponse.cpp  SearchResponse.h  SearchSuggestRequest.cpp  SearchSuggestResponse.cpp  SearchSuggestResponse.h  ServerGetRequest.h  ServerPostRequest.h  TrackDownloadRequest.cpp  TrackDownloadResponse.cpp  TrackGetPathRequest.cpp  TrackGetPathRequest.h  TrackGetPathResponse.cpp  TrackGetPathResponse.h  TrackVariantsRequest.cpp  TrackVariantsRequest.h  TrackVariantsResponse.cpp  TrackVariantsResponse.h  UserInfoRequest.cpp  UserInfoRequest.h  UserInfoResponse.cpp  UserInfoResponse.h  UserLikeAlbumsResponse.cpp  UserLikeAlbumsResponse.h  UserLikeArtistsResponse.cpp  UserLikeArtistsResponse.h  (+8 more)
src/main/commands/authorization_commands/: AuthorizationRequest.cpp  AuthorizationRequest.h  AuthorizationResponse.cpp  AuthorizationResponse.h
src/main/commands/common_structures/: ArtistDescription.h  PlaylistDescription.h
src/main/commands/headers/: AppRequestTypes.h  AppResponseTypes.h  IServerRequest.h  IServerResponse.h
src/main/commands/info_commands/: ContentInfoRequest.cpp  ContentInfoRequest.h  UserInfoRequest.h  UserInfoResponse.cpp  UserInfoResponse.h
src/main/commands/parsers/: ArtistDescriptionParser.cpp  ArtistDescriptionParser.h  PlaylistDescriptionParser.cpp
src/main/commands/user_choice_commands/: UserChoiceAlbumsResponse.cpp  UserChoiceAlbumsResponse.h  UserChoiceArtistsResponse.cpp  UserChoiceArtistsResponse.h  UserChoicePlaylistsResponse.cpp  UserChoicePlaylistsResponse.h  UserChoiceRequest.cpp  UserChoiceRequest.h  UserChoiceResponse.cpp  (+7 more)
src/main/header/: IServerRequest.h  IServerResponse.h
src/managers/: RequestResponseConvertor.cpp  ServerAccessManager.cpp  ServerAccessor.cpp
src/parsers/: AlbumDescriptionParser.cpp  ArtistDescriptionParser.cpp  BestParser.cpp  PlaylistDescriptionParser.cpp  TrackDescriptionParser.cpp
(+94 files in other folders)
